--- a/style.css
+++ b/style.css
@@ -180,6 +180,9 @@ section {
   height: 400px;
   width: 400px;
   margin: auto 0;
+  /* align-self: flex-start;
+  min-height: 100%;
+  min-height: auto; */
 }
 
 .section__text {
